fix the java file